    Backported: iMSCP::Mount library from 1.3.x branch - Library for mounting/unmounting file systems
    Changed: Upstart job file paths, sysvinit script paths and systemd unit files paths are now cached (init providers)
    Fixed: composer.phar must not be run with root user privileges (it is now run with i-MSCP system master user)
    Fixed: eth0 is hardcoded in i-MSCP network interface provider
    Fixed: Ignore user-specific options if any (~/.my.cnf file) when running mysqldump (iMSCP::Database::mysql::dumpdb)
    Fixed: Many inconsistencies in iMSCP::Getopt
    Improvement: Allow registering many event listeners at once (Event::Manager)
    Removed: beforeDispatchRequest and afterDispatchRequest events
    Removed: cache data directory (/var/cache/imscp directory)
    Removed: imscp-httpd-logs-mngr script (Apache2 logs dirctories are now mounted via the imscp_mountall service)
    Rewritten: iMSCP::SetRights library (usage of built-in functions to avoid call of system chown/chmod commands)

CONFIG
    Added: DISTRO_ID, DISTRO_CODENAME and DISTRO_RELEASE parameters in imscp.conf file
    Added: IMSCP_USER parameter (name of i-MSCP master system user)
    Added: IPV6_SUPPORT parameter (tells whether or not IPv6 support is enabled for the server)
    Added: MAX_INSTANCES, MAX_CLIENT_PER_HOST and FTPD_CONF_DIR parameters in proftpd/proftpd.data file
    Added: MOUNT_CUSTOMER_LOGS parameter in apache/apache.data file (allows to disable logs bind mounts)
    Changed: Increased default limits for ProFTPD/VsFTPd
    Changed: Moved DirectoryIndex directive in vhosts (Apache2)
    Depreciated: CACHE_DATA_DIR (/var/cache/imscp) parameter
    Fixed: Allow access to .well-known folder in any case if exists (Apache2)
    Removed: Redundant MYSQL_PREFIX_TYPE parameter
    Removed: VARIABLE_DATA_DIR parameter

CONTRIB
    Added: PhpMyAdmin/10_phpmyadmin_conffile.pl listener file (Allows to override default configuration template file)

DATABASE