@@ -18,6 +18,7 @@ BACKEND
     Backported: iMSCP::Mount library from 1.3.x branch - Library for mounting/unmounting file systems
     Changed: Upstart job file paths, sysvinit script paths and systemd unit files paths are now cached (init providers)
     Fixed: composer.phar must not be run with root user privileges (it is now run with i-MSCP system master user)
+    Fixed: Could not disable custom DNS resource record; DNS resource is always re-enabled on domain change
     Fixed: eth0 is hardcoded in i-MSCP network interface provider
     Fixed: Ignore user-specific options if any (~/.my.cnf file) when running mysqldump (iMSCP::Database::mysql::dumpdb)
     Fixed: Many inconsistencies in iMSCP::Getopt
